resolved dark mode bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,13 +16,6 @@
   --background-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-rgb: 50, 59, 65;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
   background-color: rgb(var(--background-rgb));
